@@ -305,30 +305,29 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>net.jsign</groupId>
-                <artifactId>jsign-maven-plugin</artifactId>
-                <version>6.0</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jarsigner-plugin</artifactId>
+                <version>${maven-jarsigner-plugin.version}</version>
                 <executions>
-                    <execution>
-                        <goals>
-                            <goal>sign</goal>
-                        </goals>
-                        <configuration>
-                            <skip>${skippackagesign}</skip>
-                            <fileset>
-                                <directory>target</directory>
-                                <includes>
-                                    <include>*.jar</include>
-                                </includes>
-                            </fileset>
-
-                            <storetype>AZUREKEYVAULT</storetype>
-                            <keystore>${keyvaultVaultName}</keystore>
-                            <storepass>${keyvaultAccessToken}</storepass>
-                            <alias>${keyvaultCertName}</alias>
-                        </configuration>
-                    </execution>
+                <execution>
+                    <id>sign</id>
+                    <goals>
+                    <goal>sign</goal>
+                    </goals>
+                </execution>
                 </executions>
+                <configuration>
+                    <skip>${skippackagesign}</skip>
+                    <keystore>${keyvaultVaultName}</keystore>
+                    <storetype>AZUREKEYVAULT</storetype>
+                    <alias>${keyvaultCertName}</alias>
+                    <storepass>${keyvaultAccessToken}</storepass>
+                    <providerClass>net.jsign.jca.JsignJcaProvider</providerClass>
+                    <arguments>
+                        <argument>-J--class-path="${keyvaultJcaJar}"</argument>
+                        <argument>-J--add-modules="java.sql"</argument>
+                    </arguments>
+                </configuration>
             </plugin>
            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
